Зміна тегів <figcaption>

--- a/index.html
+++ b/index.html
@@ -67,29 +67,30 @@
                 <li>
                     <figure>
                         <img src="./images/teammember1.jpeg" alt="teammember1" width="270">
-                        <figcaption>Игорь Демьяненко</figcaption>
-                        <figcaption>Product Designer</figcaption>
+                        <figcaption>Игорь Демьяненко
+                            Product Designer
+                        </figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="./images/teammember2.jpeg" alt="teammember2" width="270">
-                        <figcaption>Ольга Репина</figcaption>
-                        <figcaption>Frontend Developer</figcaption>
+                        <figcaption>Ольга Репина
+                            Frontend Developer</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="./images/teammember3.jpeg" alt="teammember3" width="270">
-                        <figcaption>Николай Тарасов</figcaption>
-                        <figcaption>Marketing</figcaption>
+                        <figcaption>Николай Тарасов
+                            Marketing</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="./images/teammember4.jpeg" alt="teammember4" width="270">
-                        <figcaption>Михаил Ермаков</figcaption>
-                        <figcaption>UI Designer</figcaption>
+                        <figcaption>Михаил Ермаков
+                            UI Designer</figcaption>
                     </figure>
                 </li>
             </ul>
