--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
 <!--header section-->
     <header>
-        <div class="container">
+        <div>
             <nav>
-                <a href="">
-                <h2>WebStudio</h2>
-                </a>
+                <a href="">WebStudio</a>
                 <ul>
                     <li> <a href="">Студия</a></li>
                     <li> <a href="">Портфолио</a></li>
@@ -36,19 +34,19 @@
         <section>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -65,49 +63,36 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="./images/teammember1.jpeg" alt="teammember1" width="270">
-                        <figcaption>Игорь Демьяненко
-                            Product Designer
-                        </figcaption>
-                    </figure>
+                    <img src="./images/teammember1.jpeg" alt="teammember1" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Designer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/teammember2.jpeg" alt="teammember2" width="270">
-                        <figcaption>Ольга Репина
-                            Frontend Developer</figcaption>
-                    </figure>
+                    <img src="./images/teammember2.jpeg" alt="teammember2" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/teammember3.jpeg" alt="teammember3" width="270">
-                        <figcaption>Николай Тарасов
-                            Marketing</figcaption>
-                    </figure>
+                    <img src="./images/teammember3.jpeg" alt="teammember3" width="270">
+                    <h2>Николай Тарасов</h2>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/teammember4.jpeg" alt="teammember4" width="270">
-                        <figcaption>Михаил Ермаков
-                            UI Designer</figcaption>
-                    </figure>
+                    <img src="./images/teammember4.jpeg" alt="teammember4" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
         <!--contact information-->
-        <section>
-            <a href="">
-                <h2>WebStudio</h2>
-            </a>
+            <a href="">WebStudio</a>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
             <ul>
-                <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </section>
     </footer>    
 </body>
 </html>
